tests/base/invalid/Return_CompileFail_11.whiley


void f(bool z):
    return z
